1-http/blue/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
  annotations:
    cert-manager.io/cluster-issuer: le-production
spec:
  rules:
  - host: blue.ingress.tipjam.xyz
    http:
      paths:
      - backend:
          service:
            name: blue
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - blue.ingress.tipjam.xyz
    secretName: blue
